# xstudio-decklink-plugin

./: CMakeLists.txt  README.md
cmake/: macros.cmake
cmake/modules/: FindCAF.cmake
src/: CMakeLists.txt  decklink_audio_device.cpp  decklink_audio_device.hpp  decklink_output.cpp  decklink_output.hpp  decklink_plugin.cpp  decklink_plugin.hpp  pixel_swizzler.cpp  pixel_swizzler.hpp  plugin_decklink_prefs.json
src/qml/: CMakeLists.txt  decklink_plugin.qrc
src/qml/BlackmagicSDI.1/: DecklinkIntegerSetting.qml  DecklinkMultichoiceSetting.qml  DecklinkSettingsButton.qml  DecklinkSettingsDialog.qml  DecklinkSettingsHorizontalWidget.qml  DecklinkSettingsVerticalWidget.qml  DecklinkStatusIndicator.qml  DecklinkToggleSetting.qml  qmldir
